[gd_scene load_steps=2 format=3 uid="uid://c0v1pb5bmtlon"]

[ext_resource type="Script" path="res://scenes/levels/main/world/spawn_waves.gd" id="1_86jcx"]

[node name="SpawnWaves" type="Node"]
script = ExtResource("1_86jcx")

[node name="BaiterTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="WaveTimer" type="Timer" parent="."]

[connection signal="timeout" from="BaiterTimer" to="." method="_on_baiter_timer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
